[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/combat_scene.gd" type="Script" id=1]
[ext_resource path="res://images/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy_general.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/gui/enemy_eliminated_button.png" type="Texture" id=5]
[ext_resource path="res://images/gui/game_over_button.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shake1"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ), Vector2( 30, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 175, 75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 150, 75 )

[node name="combat_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 240, 405 )
scale = Vector2( 1.125, 1.0625 )
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/shake1 = SubResource( 2 )

[node name="hud" parent="." instance=ExtResource( 3 )]

[node name="enemy_general" parent="." instance=ExtResource( 4 )]
position = Vector2( 150, 220 )

[node name="fight_over_button" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 10, 220 )
scale = Vector2( 1.39752, 1.63842 )
normal = ExtResource( 5 )
shape = SubResource( 3 )

[node name="game_over_button" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 10, 270 )
scale = Vector2( 1.58915, 1.93878 )
normal = ExtResource( 6 )
shape = SubResource( 4 )
